--- a/polipo2.man
+++ b/polipo2.man
@@ -1,6 +1,6 @@
 .TH POLIPO 1
 .SH NAME
-polipo \- a caching web proxy
+polipo2 \- a caching web proxy
 .SH SYNOPSIS
 .B polipo
 [
@@ -16,12 +16,12 @@ polipo \- a caching web proxy
 .IB var=val
 ]...
 .SH DESCRIPTION
-Polipo is a caching HTTP proxy.  It listens to requests for web pages
+Polipo2 is a caching HTTP proxy.  It listens to requests for web pages
 from your browser and forwards them to web servers, and forwards the
 servers' replies to your browser.  In the process, it optimises and
 cleans up the network traffic.
 .PP
-By default, Polipo listens on TCP port 8123.  Please configure your
+By default, Polipo2 listens on TCP port 8123.  Please configure your
 web browser to use the proxy on 
 .B localhost 
 port 8123.
@@ -43,16 +43,16 @@ Select an alternate configuration file.
 Change the value of a configuration variable.
 .SH FILES
 .TP
-.B /etc/polipo/config
-The default location of Polipo's configuration file.
+.B /etc/polipo2/config
+The default location of Polipo2's configuration file.
 .TP
-.B /etc/polipo/forbidden
+.B /etc/polipo2/forbidden
 The default location of the list of forbidden URLs.
 .TP
-.B /var/cache/polipo/
+.B /var/cache/polipo2/
 The default location of the on-disk cache.
 .TP
-.B /usr/share/polipo/www/
+.B /usr/share/polipo2/www/
 The default root of the local web space.
 .SH SIGNALS
 .TP 
@@ -67,14 +67,14 @@ objects, and reload the forbidden URLs file.
 write out all in-memory objects to disk and quit.
 .SH SECURITY
 The internal web server will follow symbolic links that point outside
-the local document tree.  You should run Polipo in a chroot jail if that
+the local document tree.  You should run Polipo2 in a chroot jail if that
 is a problem.
 .PP
-There is no reason to run Polipo as root.
+There is no reason to run Polipo2 as root.
 .SH FULL DOCUMENTATION
-The full manual for Polipo is maintained in a texinfo file, and is
-normally available through a web server internal to Polipo.  Please
-make sure that Polipo is running, and point your favourite web browser
+The full manual for Polipo2 is maintained in a texinfo file, and is
+normally available through a web server internal to Polipo2.  Please
+make sure that Polipo2 is running, and point your favourite web browser
 at
 .IP
 http://localhost:8123/
@@ -85,9 +85,10 @@ $ info polipo
 .PP
 at a shell prompt, or
 .IP
-C-h i m polipo RET
+C-h i m polipo2 RET
 .PP
 in
 .BR Emacs .
 .SH AUTHOR
 Polipo was written by Juliusz Chroboczek.
+Polipo2 is maintained by Silas S. Brown.
